// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaAdminList /> renders correctly with medias 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "overflow": "scroll",
    }
  }
>
  <MediaViewModal
    closeModal={[Function]}
    show={false}
    url={null}
  />
  <Connect(DeleteModal)
    closeDeleteModal={[Function]}
    deleteElement={[Function]}
    deleteModalContent="modia-delete-confirmation"
    deleteModalTitle="media-delete-title"
    showDeleteModal={false}
  />
  <MediaAdminPagestyle__ListContainer>
    <PickableList
      hasMore={true}
      onScrollToBottom={[Function]}
      useInfiniteScroll={true}
    >
      <MediaAdminPagestyle__MediaHeaderList>
        <MediaAdminPagestyle__MediaColumn
          size={400}
        >
          <FormattedMessage
            id="media-count"
            values={
              Object {
                "num": 42,
              }
            }
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="global.format"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="editor.media.size"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="table-head-label"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={300}
        >
          <FormattedMessage
            id="global.link"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
      </MediaAdminPagestyle__MediaHeaderList>
      <PickableList.Body>
        <MediaAdminPagestyle__MediaRow
          key="5452467"
          rowId="5452467"
        >
          <MediaAdminPagestyle__MediaColumnImage
            size={400}
          >
            <div>
              <img
                alt="oui"
                src="/url/ok"
              />
              <span>
                oui
              </span>
            </div>
            <div>
              <button
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  id="action_show"
                  values={Object {}}
                >
                  <Component />
                </FormattedMessage>
              </button>
              <span>
                |
              </span>
              <button
                className="delete"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  id="global.delete"
                  values={Object {}}
                >
                  <Component />
                </FormattedMessage>
              </button>
            </div>
          </MediaAdminPagestyle__MediaColumnImage>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            svg
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            50 x 100px
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            12 ko
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={300}
          >
            <Link
              url="/url/ok"
            />
          </MediaAdminPagestyle__MediaColumn>
        </MediaAdminPagestyle__MediaRow>
        <MediaAdminPagestyle__MediaRow
          key="46575"
          rowId="46575"
        >
          <MediaAdminPagestyle__MediaColumnImage
            size={400}
          >
            <div>
              <img
                alt="ayaaaaa"
                src="/url/nonoon"
              />
              <span>
                ayaaaaa
              </span>
            </div>
            <div>
              <button
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  id="action_show"
                  values={Object {}}
                >
                  <Component />
                </FormattedMessage>
              </button>
              <span>
                |
              </span>
              <button
                className="delete"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  id="global.delete"
                  values={Object {}}
                >
                  <Component />
                </FormattedMessage>
              </button>
            </div>
          </MediaAdminPagestyle__MediaColumnImage>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            svg
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            60 x 200px
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={100}
          >
            42 ko
          </MediaAdminPagestyle__MediaColumn>
          <MediaAdminPagestyle__MediaColumn
            size={300}
          >
            <Link
              url="/url/nonoon"
            />
          </MediaAdminPagestyle__MediaColumn>
        </MediaAdminPagestyle__MediaRow>
      </PickableList.Body>
    </PickableList>
  </MediaAdminPagestyle__ListContainer>
</div>
`;

exports[`<MediaAdminList /> renders correctly with no media 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "overflow": "scroll",
    }
  }
>
  <MediaViewModal
    closeModal={[Function]}
    show={false}
    url={null}
  />
  <Connect(DeleteModal)
    closeDeleteModal={[Function]}
    deleteElement={[Function]}
    deleteModalContent="modia-delete-confirmation"
    deleteModalTitle="media-delete-title"
    showDeleteModal={false}
  />
  <MediaAdminPagestyle__ListContainer>
    <PickableList
      hasMore={false}
      onScrollToBottom={[Function]}
      useInfiniteScroll={true}
    >
      <MediaAdminPagestyle__MediaHeaderList>
        <MediaAdminPagestyle__MediaColumn
          size={400}
        >
          <FormattedMessage
            id="media-count"
            values={
              Object {
                "num": 0,
              }
            }
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="global.format"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="editor.media.size"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={100}
        >
          <FormattedMessage
            id="table-head-label"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
        <MediaAdminPagestyle__MediaColumn
          size={300}
        >
          <FormattedMessage
            id="global.link"
            values={Object {}}
          />
        </MediaAdminPagestyle__MediaColumn>
      </MediaAdminPagestyle__MediaHeaderList>
      <PickableList.Body />
    </PickableList>
  </MediaAdminPagestyle__ListContainer>
</div>
`;
